--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,3 +118,8 @@
     @apply bg-background text-foreground;
   }
 }
+
+@import "@uploadthing/react/styles.css";
+
+@import "uploadthing/tw/v4";
+@source "../node_modules/@uploadthing/react/dist";
